# innofw

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  DockerfileAstra  DockerfileMED  DockerfileNM  DockerfilePROM  DockerfileWindows  README.md  README_DEV.md  README_linux_rus.md  README_med.md  README_nm.md  README_old.md  README_prom.md  README_qb.md  config_test.py  entrypoint.sh  et --mixed  index.html  infer.py  launch_jup.sh  make_inference.py  mkdocs.yml  nohup_jup.out  objects.inv  out_report.xml  pckg_util.py  predict.py  pyproject.toml  requirements.txt  run_tests.sh  test.py  test1.py  train.py  wandb_tables.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ASK_FOR_HELP.yaml  BUG_REPORT.yaml  FEATURE_REQUEST.yaml  bug_report.md
.github/workflows/: clean.yaml  docker-image.yml
config/: infer.yaml  test.yaml  train.yaml  ui.yaml
config/augmentations/: classification.yaml  one_shot_learning.yaml  segmentation_inference.yaml  segmentation_satellite_imagery.yaml  segmentation_stroke.yaml
config/augmentations_test/: arable_sentinel2.yaml  medium.yaml  medium_arable.yaml
config/augmentations_train/: arable-ndvi-min.yaml  arable-ndvi.yaml  forest-bin-seg.yaml  linear-roads-bin-seg-test.yaml  linear-roads-bin-seg.yaml  medium_arable.yaml  none.yaml  osl.yaml  segmentation_medium.yaml  stroke_segmentation.yaml  to_tensor.yaml  water-erosion-bin-seg.yaml
config/augmentations_val/: arable-ndvi-strong.yaml  forest-bin-seg.yaml  landslides-kanopus.yaml  linear-roads-bin-seg-test.yaml  linear-roads-bin-seg.yaml  medium_test_predict.yaml  osl.yaml  stroke_segmentation.yaml  water-erosion-bin-seg.yaml
config/callbacks/: auto.yaml  classification.yaml  clustering.yaml  default.yaml  detection.yaml  lung_description_decision.yaml  multiclass_segmentation.yaml  regression.yaml  segmentation.yaml  segmentation_2.yaml
config/clear_ml/: disabled.yaml  enabled.yaml  test_queue.yaml
config/datasets/: anomaly_detection_images.yaml  anomaly_detection_timeseries_ecg.yaml  bitumen.yaml  bopp.yaml  chembl_33_selfies.yaml  chembl_33_smiles.yaml  clustering_credit_cards.yaml  detection_lep.yaml  detection_lep_insplad.yaml  empty_template.yaml  mcl1.yaml  mcl1_pic50.yaml  osl_faces.yaml  pipes.yaml  polymers.yaml  qm7.yaml  qm9.yaml  qm9_2.yaml  qm9_selfies.yaml  regression_house_prices.yaml  regression_industry_data.yaml  regression_tmqm.yaml  segmentation_arable.yaml  segmentation_arable_inference.yaml  segmentation_brain.yaml  sibur_people_n_head_detection.yaml  table_regression.yaml  token_classification_drugprot.yaml  water_erosion_segmentation.yaml
config/experiments/: AL_04062023_203214dd_image_to_text.yaml  AL_04062023_203214dd_image_to_text_yaml  AL_040623_1019e38b_image_to_text.yaml  AL_06062023_23241df_image_to_text.yaml  AL_190423_b8635e22_image_to_text.yaml  DA_230922_sdgh32lk_deeplab.yaml  EXPERIMENT.yaml  GR_050822_AGgrv2Dg_catboost_regressor_qm9.yaml  GR_050822_AGgrv2Dg_catboost_regressor_qm9_non_pretrained.yaml  GR_050822_AGgrv2Dg_catboost_regressor_qm9_pretrained.yaml  GR_070922_jLqZn8Wh_catboost_regressor_mcl1.yaml  GR_160822_AsdDwgf2_catboost_active_learning_qm9.yaml  GR_180822_dAdsW3e5_catboost_uncertainty_active_learning_qm9.yaml  GR_230822_ASdw31ga_catboost_industry_data.yaml  GR_240822_BCXas132_catboost_regressor_qm9_screening.yaml  GR_300822_LIj29Hw_biobert_ner_drugprot.yaml  IM_040822_rbe23lls_anomaly_detection_timeseries_lstm.yaml  IM_190722_vwer3f23_oneshotlearning.yaml  KA_031122_invalid_experiment.yaml  KA_120722_8adfcdaa_yolov5.yaml  KA_120722_8adfcdaa_yolov5_pretrained.yaml  KA_130722_9f7134db_linear_regression.yaml  KA_170122_43fdja_yolov5_sibur.yaml  KA_190722_0a70ef39_xgbregressor_cc.yaml  KA_230922_sdgh32lk_deeplab.yaml  KA_230922_sdgh32lk_deeplab_full.yaml  KA_230922_sdgh32lk_unet.yaml  KA_250123_439erfks_basic_water_erosion_segmentation.yaml  KA_280722_9379c32c_kmeans_credit_cards.yaml  KA_280722_ba099979_catboost_regressor.yaml  KG_090323_wpng92_mnist.yaml  KG_150423_lsjdvnd8_segformer_uwmadison.yaml  KG_260423_boqe16_unet_uwmadison.yaml  KG_260423_pgn135_deeplab_uwmadison.yaml  KG_280423_obwg91_sweep_test.yaml  NP_210523_yolov8_insects.yaml  PN_010423_concatenated_classification.yaml  SK_010822_infer_kdsr_linear_regression.yaml  SK_010822_jvslrmvk_resnet.yaml  SK_180822_qmciwj41_unet_brain.yaml  (+9 more)
config/initializations/: he.yaml  random.yaml  xavier.yaml
config/loggers/: wandb.yaml
config/loggings/: auto.yaml
config/losses/: auto.yaml  deafault.yaml  detection.yaml  focal_tversky_loss.yaml  image-to-text.yaml  l1.yaml  log_loss.yaml  mse.yaml  multiclass_segmentation_losses.yaml  one_shot_learning.yaml  segmentation_losses.yaml  simple_vae.yaml  vae.yaml  (+1 more)
config_my/: default.yaml
docs/: FAQ.md  api.md  contributing.md  index.md  installation.md  quick-start.md  troubleshooting.md
dui/: README.txt  app.py  levyproc.py  requirements.txt
examples/: add_model_metadata.bat  add_model_metadata.sh  big_data.bat  big_data.sh  camera_info.bat  camera_info.sh  check_defaults.bat  check_defaults.sh  check_defaults.yaml  cosine_annealing_ls_scheduler.sh  demo_augmentation.bat  demo_augmentation.sh  dicom_to_png.bat  download_dataset.bat  download_dataset.sh  download_model.bat  exponential_lr_scheduler.sh  full_mem_loading.bat  full_mem_loading.sh  gpu_monitoring.bat  gpu_monitoring.sh  incorrect_config.sh  incorrect_input.bat  infer_Catboost_test.sh  infer_QSAR_AL_test.bat  infer_QSAR_AL_test.sh  infer_QSAR_test.sh  infer_VAE_reverce_test.sh  infer_VAE_test.bat  infer_VAE_test.sh  infer_air_data.sh  infer_auto.sh  infer_biobert.sh  infer_brain_segmentation.sh  infer_catboost_industry_data.bat  infer_catboost_industry_data.sh  infer_catboost_mcl1.sh  infer_classification.bat  infer_classification.sh  infer_clustering.bat  (+115 more)
explanation/: index.html
how-to-guides/: index.html
innofw/: __init__.py  constants.py  exceptions.py  pipeline.py  two.py
reference/: index.html
tests/: utils.py
tutorials/: index.html
ui/: README.md  control.py  image_ui.py  table_ui.py  utils.py  visuals.py  webserver.py
(+903 files in other folders)
